fixes word wrap

--- a/src/components/Terminal.css
+++ b/src/components/Terminal.css
@@ -8,7 +8,7 @@
 .terminal > * {
     color: #18cca8;
     font-family: monospace, monospace;
-    white-space: pre;
+    white-space: pre-wrap;
     font-size: 16px;
     word-wrap: break-word;
 }
